# advent-of-code

./: .gitignore
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
_archive/joe/: README.md  advent2021.cabal
_archive/mariel/: package.json
albaer/: .gitignore
albaer/day01/: code.py  readme.md
albaer/day02/: code.py  readme.md  solution.txt
albaer/day03/: code.py  solution.txt  tests.py
albaer/day06/: code.py  solution.txt  tests.py
albaer/day07/: code.py  solution.txt  tests.py
albaer/day08/: code.py  solution.txt  tests.py
albaer/day10/: code.py  readme.md  solution.txt  tests.py
albaer/day11/: code.py  readme.md  solution.txt  tests.py
albaer/day12/: code.py  solution.txt  tests.py
albaer/templates/: code.py
dannybrown/src/: day1.py  day2.py  helpers.py
dce/: .gitignore
dce/day1/: README.md  day1.hs
dce/day2/: README.md  day2.hs
dce/day3/: day3  day3.hs
dce/day4/: day4.hs
dce/day5/: day5.hs
dce/day6/: day6.hs
dce/day7/: day7.hs
dce/day8/: day8.hs
dlederle/day_2/: README.md  gleam.toml
dlederle/hello_world/: gleam.toml
efatsi/: go.mod
efatsi/day_1/: main.go
efatsi/day_10/: main.go
efatsi/day_11/: main.rb
efatsi/day_12/: main.go
efatsi/day_13/: main.go
efatsi/day_14/: main.go
efatsi/day_15/: main.go
efatsi/day_16/: main.go  main_test.go  operator_binary.txt
efatsi/day_17/: analysis.rb  go.mod  main.go  main_test.go
efatsi/day_18/: example_stats.md  go.mod  main.go  main_test.go
efatsi/day_19/: example_sm.txt  go.mod  main.go  scratch.rb
efatsi/day_2/: main.go
efatsi/day_20/: main.go
efatsi/day_21/: go.mod  main.go
efatsi/day_3/: main.go
efatsi/day_4/: example_mine.txt  main.go
joe/: advent2021.cabal
joe/day-01/: Day01.hs
joe/day-02/: Day02.hs
joe/day-03/: Day03.hs
joe/day-04/: Day04.hs
joe/day-05/: Day05.hs
joe/day-06/: Day06.hs
joe/day-07/: Day07.hs
joe/day-08/: Day08.hs
joe/hello-world/: hello-world.cabal
mariel/: README.md  package-lock.json
nicktelsan/: .gitignore  README.md  package.json
solomonhawk/: Cargo.toml
solomonhawk/2021/src/: day16.rs
solomonhawk/2022/: justfile
solomonhawk/2022/src/: day1.rs  day2.rs  day3.rs  day7.rs  day8.rs  dayn.rs.tmpl  lib.rs
solomonhawk/2023/lib/: day1.re
solomonhawk/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day18.rs  day2.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
(+174 files in other folders)
