[package]
name = "solomonhawk"
version = "0.1.0"
edition = "2021"
authors = ["Solomon Hawk <solomon.hawk@viget.com>"]

[workspace]
members = ["src/*", "target/aoc/aoc-autobuild", "target/aoc/aoc-autobench"]

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.2"
